# podcrack

./: .gitignore  HOMEBREW.md  README.md  pyproject.toml  requirements.txt  run.sh  setup-homebrew.sh  test.sh
.github/workflows/: build_and_test.yml
Formula/: podcrack.rb
podcrack/: __init__.py  __main__.py  display.py  export.py  main.py  metadata.py  models.py  parser.py  scanner.py
podpulp/: __init__.py  __main__.py  display.py  export.py  main.py  metadata.py  parser.py  scanner.py
tests/: README.md  __init__.py  test_export.py  test_metadata.py  test_models.py  test_parser.py  test_scanner.py
