[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "podpulp"
version = "1.0.0"
description = "Apple Podcast Transcript Extractor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.7.0",
    "questionary>=2.0.1",
    "pyperclip>=1.9.0",
]

[project.scripts]
podpulp = "podpulp.main:main"
