[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["podcrack"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]

[project]
name = "podcrack"
version = "1.0.0"
description = "Apple Podcast Transcript Extractor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.7.0",
    "questionary>=2.0.1",
    "pyperclip>=1.9.0",
]

[project.scripts]
podcrack = "podcrack.main:main"
